# pydamodb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: integration.yml  publish.yml
pydamodb/: __init__.py  async_models.py  base.py  conditions.py  exceptions.py  expressions.py  fields.py  keys.py  models.py  mypy.py  sync_models.py
test/: conftest.py
test/integration/: conftest.py  test_async_dynamodb.py  test_complex_serialization.py  test_dynamodb.py  test_sync_dynamodb.py  test_update_conditions.py
test/typing/: test_mypy_plugin.py
test/unit/: test_async_models.py  test_conditions.py  test_exceptions.py  test_fields.py  test_models.py  test_sync_models.py
